feat: przedmowa update

--- a/tex/1-wstep/2-cel-i-zakres-pracy.tex
+++ b/tex/1-wstep/2-cel-i-zakres-pracy.tex
@@ -1,5 +1,6 @@
 \subsection{Cel i zakres pracy}
 
-Celem pracy jest kontynuacja badań ENI, polegająca na zaproponowaniu \hyperlink{def:architektura}{\textit{architektury}} platformy, na której możliwe będzie modelowanie oraz uruchamianie zamkniętych pętli sterowania. Niniejsza praca nie skupia się na aspektach związanych ze sztuczną inteligencją. Platforma ma jedynie służyć do zamodelowania oraz uruchomienia \hyperlink{def:workflow}{\textit{workflow}} pętli, ale sama nie stanowi środowiska wykonawczego dla jej komponentów. 
+Celem pracy jest kontynuacja badań ETSI, polegająca na zaproponowaniu \hyperlink{def:architektura}{\textit{architektury}} platformy, na której możliwe będzie modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania. Niniejsza praca nie koncentruje się na aspektach związanych ze sztuczną inteligencją. Platforma ma jedynie służyć do modelowania, uruchamiania i zarządzania przepływem pracy pętli (ang. \hyperlink{def:workflow}{\textit{workflow}}), ale sama nie stanowi środowiska wykonawczego dla jej komponentów.
 
-W zakres pracy wchodzi: sformułowanie wymagań na platformę, opracowanie proponowanej architektury wsparte licznymi badaniami podczas jej powstawania, implementacja PoC (ang. \textit{Proof of Concept}) według proponowanej architektury, przeprowadzenie testów platformy oraz analiza jej potencjału w kontekście dalszego rozwoju. Po publikacji praca może stanowić podstawę do implementacji \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych Systemów Zarządzania Siecią}, zgodnych ze specyfikacjami ENI. 
+W zakres pracy wchodzi: przegląd powiązanej literatury, sformułowanie wymagań dla platformy, opracowanie jej architektury, implementacja PoC (ang. \textit{Proof of Concept}), przeprowadzenie testów oraz analiza potencjału platformy w kontekście dalszego rozwoju. Po publikacji praca może stanowić podstawę do implementacji \hyperlink{def:kognitywny-system-zarzadzania-siecia}{Kognitywnych Systemów Zarządzania Siecią}, zgodnych ze specyfikacjami ETSI.
+
