--- a/tex/abstract/eng.tex
+++ b/tex/abstract/eng.tex
@@ -1,5 +1,5 @@
-The project described in this thesis focuses on proposing and implementing a reusable architecture (hereafter referred to as "the Platform") that enables the modeling and execution of closed control loops in Kubernetes. The genesis of the project lies in the work of one of the ETSI committees called "ENI - Experiential Networked Intelligence," which aims to simplify the work of telecommunications network operators by leveraging artificial intelligence mechanisms in closed control loops based on metadata-driven and context-aware policies. In one of its documents, ENI reviews closed control loops known to humanity from other fields. A natural next step is to propose a platform on which operators could design and execute such loops. 
+The project described in this work focuses on proposing and presenting the implementation of a platform architecture that enables the modeling and execution of closed control loops in Kubernetes. The genesis of the project stems from the work of standardization committees such as ETSI ZSM and ETSI ENI, which focus on specifying autonomous and cognitive management systems for telecommunication networks. The architectures of these specified systems are based on closed control loops.
 
-To achieve this, a set of requirements and assumptions for such a system was defined. Kubernetes was chosen as the runtime environment due to its widespread adoption in the community and its inherent use of closed control loops. An extensive analysis was conducted on how Kubernetes extension mechanisms, such as "Custom Resources" and the "Operator" pattern, could be used to create a framework enabling the modeling of closed control loops. 
+A natural next step is to propose a platform where an operator could design and execute such loops. To this end, a set of requirements and assumptions for such a system has been defined. Kubernetes was chosen as the runtime environment. Subsequently, an extensive analysis was conducted on how Kubernetes extension mechanisms, such as "Custom Resources" and the "Operator Pattern," can be leveraged to create a framework that enables the modeling of closed control loops. Based on this analysis, a highly flexible architecture was developed and then implemented using the Kubebuilder framework. Finally, the platform was tested using a 5G network emulator, specifically Open5GS combined with UERANSIM.
 
-This thesis describes the developed platform, its architecture, the semantics of syntax in the defined objects, operational principles, integrations with external systems, and a user guide. It also discusses the platform's implementation, the technologies behind it, and the decisions made during its development. Finally, the thesis presents a practical test of the platform's functionality using the Open5GS 5G system emulator in combination with UERANSIM. The work concludes with a list of findings and potential extensions or improvements to the platform.
+This work describes a review of related literature, the developed platform, its architecture, and a user guide. It also discusses an exemplary implementation of the platform, the technologies behind it, and the decisions made during its development. Finally, a practical test of the platform's functionality is presented. The work concludes with a summary of findings and potential future development paths for the platform.
