--- a/tex/abstract/pl.tex
+++ b/tex/abstract/pl.tex
@@ -1,3 +1,5 @@
-Projekt opisany w niniejszej pracy skupia się na zaproponowaniu oraz przedstawieniu implementacji  architektury platformy, która pozwala na modelowanie oraz uruchamianie zamkniętych pętli sterowania w Kubernetes. Genezą projektu jest praca jednego z komitetów ETSI o nazwie "ENI - Experiential Networked Intelligence", która skupia się na ułatwieniu pracy operatora sieci telekomunikacyjnych wykorzystując mechanizmy sztucznej inteligencji w zamkniętych pętlach sterowania. ENI w jednym ze swoich dokumentów dokonuje przeglądu zamkniętych pętli sterowania znanych ludzkości z innych dziedzin. 
+Projekt opisany w niniejszej pracy skupia się na zaproponowaniu oraz przedstawieniu implementacji architektury platformy, która pozwala na modelowanie oraz uruchamianie zamkniętych pętli sterowania w Kubernetes. Genezą projektów jest praca komitetów standaryzacyjnych takich jak ETSI ZSM czy ETSI ENI, które skupiają się na specyfikacji autonomicznych oraz kognitywnych systemów zarządzania sieciami telekomunikacyjnymi. Architektury specyfikowanych systemów opierają się na zamkniętych pętlach sterowania
 
-Naturalnym następnym krokiem jest zaproponowanie platformy, na której operator mógłby takie pętle projektować oraz uruchamiać. W tym celu zdefiniowano zestaw wymagań oraz założeń dla takiego systemu. Jako środowisko uruchomieniowe wybrano  Kubernetes z racji, że jest to system dobrze znany w społeczności oraz sam natywnie używa zamkniętych pętli sterowania. Następnie przeprowadzono obszerną analizę jak za pomocą mechanizmów rozszerzania Kubernetes takich jak "Custom Resources" oraz "Operator Pattern" można stworzyć framework umożliwiający modelowanie zamkniętych pętli sterowania. Praca opisuje powstałą platformę, jej architekturę, semantykę składni w definiowanych obiektach, zasady działania, integracje z zewnętrznymi systemami oraz instrukcję jej użytkowania. Omówiona została również przykładowa implementacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce wykorzystując do tego emulator systemu 5G jakim jest Open5GS w połączeniu z UERANSIM. Pracę podsumuję lista wniosków oraz potencjalnych dróg rozwoju platformy. 
+Naturalnym następnym krokiem jest zaproponowanie platformy, na której operator mógłby takie pętle projektować oraz uruchamiać. W tym celu zdefiniowano zestaw wymagań oraz założeń dla takiego systemu. Jako środowisko uruchomieniowe wybrano Kubernetes. Następnie przeprowadzono obszerną analizę jak za pomocą mechanizmów rozszerzania Kubernetes takich jak "Custom Resources" oraz "Operator Pattern" można stworzyć framework umożliwiający modelowanie zamkniętych pętli sterowania. Na tej podstawie wypracowano bardzo elastyczną architekturą, którą następnie zaimplementowano z użyciem środowiska Kubebuilder. Na koniec wykonano test platformy za pomocą emulatora sieci 5G w postaci Open5GS w połączeniu z UERANSIM. 
+
+Praca opisuje przegląd powiązanej literatury, powstałą platformę, jej architekturę oraz instrukcję jej użytkowania. Omówiona została również przykładowa implementacja platformy, technologie za nią stojące oraz decyzje podjęte podczas jej powstawania. Finalnie przedstawiono również test działania platformy w praktyce. Pracę podsumowuje lista wniosków oraz potencjalnych dróg rozwoju platformy. 
