--- a/tex/1-wstep/1-przedmowa.tex
+++ b/tex/1-wstep/1-przedmowa.tex
@@ -1,10 +1,9 @@
 \subsection{Przedmowa}
 
-Wraz z rozwojem telekomunikacji stopień jej skomplikowania oraz mnogość podłączonych urządzeń stale rośnie. Sieci 5G zwiastują obsługę miliardów urządzeń, co sprawia, że tradycyjne podejście do zarządzania sieciami staje się niewystarczające. W pewnym momencie manualne operowanie sieciami (ang. \textit{human-driven networks}) stanie się wręcz niemożliwe. Dlatego obserwujemy obecnie zwrot w stronę wirtualizacji oraz automatyzacji sieci. Jednocześnie dynamiczny rozwój sztucznej inteligencji otwiera nowe możliwości. Te dwa czynniki stanowią wspólnie świetny fundament do tego, aby branża sieci telekomunikacyjnych postawiła sobie za cel budowę "inteligentnych" sieci - takich, które są w pełni autonomiczne, samowystarczalne oraz nie wymagają nadzoru ludzkiego.
+Wraz z rozwojem telekomunikacji stopień jej skomplikowania oraz mnogość podłączonych urządzeń stale rośnie. Sieci 5G zwiastują obsługę miliardów urządzeń, co sprawia, że tradycyjne podejście do zarządzania sieciami staje się niewystarczające. W pewnym momencie manualne operowanie sieciami (ang. \textit{human-driven networks}) stanie się wręcz niemożliwe. Dlatego obserwujemy obecnie zwrot w stronę wirtualizacji oraz automatyzacji sieci. Równocześnie dynamiczny rozwój sztucznej inteligencji otwiera nowe możliwości. Te dwa czynniki stanowią wspólnie solidny fundament do tego, aby branża sieci telekomunikacyjnych postawiła sobie za cel budowę "inteligentnych" sieci - takich, które są w pełni autonomiczne, samowystarczalne oraz nie wymagają nadzoru ludzkiego.
 
-W tym celu ETSI (European Telecommunications Standards Institute) powołało komitet o nazwie ENI - Experiential Networked Intelligence, który ma na celu wypracowanie specyfikacji dla Kognitywnych Systemów Zarządzania Siecią (Cognitive Network Management system). Kognitywny system oznacza taki, który jest w stanie uczyć się i podejmować decyzje bazujące na zebranej wiedzy w sposób przypominający ludzki umysł. ENI opiera swoją architekturę na zamkniętych pętlach sterowania.
+W tym celu ETSI (European Telecommunications Standards Institute) powołało dwa komitety: ENI (Experiential Networked Intelligence) oraz ZSM (Zero touch network \& Service Management). Oba komitety mają na celu wypracowanie specyfikacji Kognitywnych Systemów Zarządzania Siecią (Cognitive Network Management system). Kognitywny system oznacza taki, który jest w stanie uczyć się i podejmować decyzje, bazując na zebranej wiedzy, w sposób przypominający ludzki umysł. Obie architektury opierają swoje działanie na sztucznej inteligencji oraz zamkniętych pętlach sterowania. 
 
-Pętlą sterowania ENI nazywa mechanizm, który monitoruje wydajność systemu lub procesu poddawanego kontroli w celu osiągnięcia pożądanego zachowania. Innymi słowy, pętla sterowania reguluje działanie zarządzanego obiektu. Pętle sterowania można podzielić na zamknięte lub otwarte w zależności od tego czy działanie sterujące zależy od sprzężenia zwrotnego z kontrolowanego obiektu. Jeśli tak, pętle nazywamy zamkniętą, jeśli nie - otwartą. 
+Pętlą sterowania ETSI nazywa mechanizm, który monitoruje wydajność systemu lub procesu poddawanego kontroli w celu osiągnięcia pożądanego zachowania. Innymi słowy, pętla sterowania reguluje działanie zarządzanego obiektu. Pętle sterowania można podzielić na zamknięte lub otwarte, w zależności od tego, czy działanie sterujące zależy od sprzężenia zwrotnego z kontrolowanego obiektu. Jeśli tak, pętle nazywamy zamkniętą, jeśli nie - otwartą. 
 
-W przypadku architektury ENI, zamknięta pętla sterowania służy jako model organizacji pracy (ang. \hyperlink{def:workflow}{\textit{workflow}}) elementów odpowiedzialnych za sztuczną inteligencję. W dokumencie \cite*{enioverview}, ENI dokonało przeglądu obiecujących architektur zamkniętych pętli sterowania znanych ludzkości. Naturalnym następnym krokiem jest zaproponowanie platformy, na której można takowe pętle zamodelować oraz uruchomić. 
-
+W przypadku architektur ETSI, zamknięta pętla sterowania służy jako model organizacji przepływu pracy (ang. \hyperlink{def:workflow}{\textit{workflow}}) elementów odpowiedzialnych za sztuczną inteligencję. Obie architektury referencyjne opisują modelowanie, uruchamianie oraz zarządzanie zamkniętymi pętlami sterowania w celu osiągania celów zarządzania. Jednak wciąż brakuje ogólnodostępnej platformy, która pozwalałaby operatorom w praktyce projektować, wdrażać i zarządzać takimi pętlami sterowania zgodnie z założeniami ETSI ZSM i ENI, co stanowi istotną lukę technologiczną. Naturalnym następnym krokiem jest zaproponowanie architektury platformy, która umożliwia takie działania oraz wpisuje się w aktualne trendy systemów teleinformatycznych, takich jak podejście cloud-native, wykorzystanie mikrousług oraz integracja z ekosystemem Kubernetes.
